@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2013 - TortoiseSVN
+// Copyright (C) 2013, 2015 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -30,6 +30,8 @@ public:
      * Executes the command.
      */
     virtual bool            Execute() override;
+private:
+    bool                    CopyFileHandleReadOnly(LPCWSTR lpExistingFilename, LPCWSTR lpNewFilename);
 };
 
 
